RESOLVED FIXED285229
[WPE] Fix compilation issue with USE_GBM=OFF and USE_LIBDRM=OFF
https://bugs.webkit.org/show_bug.cgi?id=285229
Summary [WPE] Fix compilation issue with USE_GBM=OFF and USE_LIBDRM=OFF
Jani Hautakangas
Reported 2024-12-29 10:12:27 PST
When USE_GBM=OFF and USE_LIBDRM=OFF, WPE platform compilation fails. This combination also implies ENABLE_GPU_PROCESS=OFF.
Attachments
Jani Hautakangas
Comment 1 2024-12-29 10:15:35 PST
EWS
Comment 2 2025-01-14 00:34:48 PST
Committed 288832@main (0ec85924c786): <https://commits.webkit.org/288832@main> Reviewed commits have been landed. Closing PR #38415 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.