[WPE] Fix compilation issue with USE_GBM=OFF and USE_LIBDRM=OFF https://bugs.webkit.org/show_bug.cgi?id=285229

Reviewed by Carlos Garcia Campos.

When USE_GBM=OFF and USE_LIBDRM=OFF, WPE platform compilation fails.
This combination also implies ENABLE_GPU_PROCESS=OFF. The patch
adds necessary ifdefs and includes to resolve the issue.

* Source/WebKit/UIProcess/API/glib/WebKitProtocolHandler.cpp:
(WebKit::WebKitProtocolHandler::handleGPU):
* Source/WebKit/UIProcess/wpe/WebPageProxyWPE.cpp:
* Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:

Canonical link: https://commits.webkit.org/288832@main